# color-picker

./: .gitignore  CMakeLists.txt  README.md  build-appimage.sh  build.sh  colorpicker.desktop  main.cpp  uninstall.sh
.github/workflows/: release.yml
